<resources>
    <string name="app_name">SPOC</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="nome">Nome</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Conectar</string>
    <string name="action_sign_in_short">Senha</string>
    <string name="error_invalid_email">Este endereço de email é inválido.</string>
    <string name="error_invalid_password">A senha é muito curta.</string>
    <string name="error_incorrect_password">A senha está incorreta.</string>
    <string name="error_field_required">É necessário preencher este campo.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Cadastrar</string>
</resources>
